--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div></div>
+    <div id="top">
+        <div class="icon"></div>
+        <div class="icon"></div>
+    </div>
+    <div id="main">
+
+    </div>
+    <div id="bottom">
+        
+    </div>
 </body>
 </html>
