--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
             <div class="people"> 
                 <img src="images/usuarios.svg" alt="">
             </div>
-            </div>
+        </div>
+        <div class="hidden">
+            <div data-test="overlay" class="menu"></div>
+            <div class="side"></div>
+        </div>
         <div id="content">
         
         </div>
