--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="uol">
                 <img src="images/uol.png" alt="">
             </div>
-            <div class="people"> 
+            <div class="people" onclick="hideSide()""> 
                 <img src="images/usuarios.svg" alt="">
             </div>
         </div>
@@ -23,6 +23,12 @@
             <div data-test="overlay" class="menu"></div>
             <div class="side"></div>
         </div>
+        <div class="menu-lateral hidden">
+            <div data-test="overlay" class="metade-cinza"></div>
+
+            <div class="menu"></div>
+        </div>
+
         <div id="content">
         
         </div>
