--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="uol">
                 <img src="images/uol.png" alt="">
             </div>
-            <div class="people" onclick="hideSide()""> 
+            <div class="people" onclick="hideSide()"> 
                 <img src="images/usuarios.svg" alt="">
             </div>
         </div>
